<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_series"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/menu_nav_series" />

    <item
        android:id="@+id/nav_movies"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/menu_nav_movies" />

    <item
        android:id="@+id/nav_explore"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_nav_explore" />

    <item
        android:id="@+id/nav_upcoming"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/menu_nav_upcoming" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_nav_profile" />
</menu>